Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for released sg3_utils-1.46 [20210320] [svn: r879]
  - sg_rep_pip: new utility: report provisioning initialization
    pattern command
  - sg_turs: estimated time-to-ready [20-061r2]
    - add --delay=MS option
  - sg_requests: substantial cleanup
  - sg_vpd: add Format presets and Concurrent positioning ranges
    - add hot-pluggable field in standard Inquiry [20-114r2]
  - sg_inq: add hot-pluggable field in standard Inquiry
  - sg_dd: --verify : separate category for miscompare errors
    - --verify : oflag=coe continue on miscompares, counts them
    - add oflag=nocreat and conv=nocreat : OFILE must exist
    - add iflag=00, ff, random flags
    - add command timeout after comma in time= operand
  - sg_get_elem_status: add ralwd bit sbc4r20a
  - sg_write_x: add dld bits to write(32) [sbc4r19a]
  - sg_rep_zones: print invalid write pointer LBA as -1 rather
    than 16 "f"s
  - sg_opcodes: improve handling of RWCDLP field
  - sg_ses: use fan speed factor field for calculation [ses4r04]
    - add --all (-a) option, same action as --join
  - sg_compare_and_write: add examples section to its manpage
  - sg_modes: document '-s' option (same as '-6')
  - sg_sanitize + sg_format: when --verbose given once report
    probable success; without --verbose 'no news is good news'
  - sg_zone: add Remove element and modify zones command
  - sg_raw: increase maximum data-in and data-out buffer size
    from 64 KB to 1 MB
    - fix --cmdfile= handling
    - add --nvm option to send commands from the NVM command set
    - add --cmdset option to bypass cdb heuristic
    - add --scan= first_opcode,last_opcode
  - sg_pt_freebsd: allow device names without leading /dev/
    thus fix for regression introduced in rev 731 (ver: 1.43)