@@ -437,7 +437,7 @@ of false. The corresponding true value is conveyed by a 0 exit status.
 .TP
 .B 40
 the command sent to \fIDEVICE\fR has received an "aborted command" sense
-key with an additional sense code of 0x10. This group is related to
+key with an additional sense code of 0x10. This value is related to
 problems with protection information (PI or DIF). For example this error
 may occur when reading a block on a drive that has never been written (or
 is unmapped) if that drive was formatted with type 1, 2 or 3 protection.
