@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for released sg3_utils-1.46 [20210320] [svn: r879]
+Changelog for released sg3_utils-1.46 [20210321] [svn: r880]
   - sg_rep_pip: new utility: report provisioning initialization
     pattern command
   - sg_turs: estimated time-to-ready [20-061r2]
@@ -13,6 +13,7 @@ Changelog for released sg3_utils-1.46 [20210320] [svn: r879]
   - sg_inq: add hot-pluggable field in standard Inquiry
   - sg_dd: --verify : separate category for miscompare errors
     - --verify : oflag=coe continue on miscompares, counts them
+    - add cdl= operand for command duration limit indexes
     - add oflag=nocreat and conv=nocreat : OFILE must exist
     - add iflag=00, ff, random flags
     - add command timeout after comma in time= operand
